--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     -->
     <title>Arislab.ai</title>
   </head>
+  <head>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+  </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
